InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/vlocity_ins__InsClaimReserveTransaction__c.object-meta.xml
<CustomObject>
    <description>The Reserve Transaction is used to track claim reserves as the claim is processed. Each entry is an accounting transaction. A reserve transaction reserves funds for the specified claim based on reported or estimated costs (incurred but not reported, IBNR). Payment or other transactions draw down the reserved balance as claims are settled. Master-detail child object of Claim.</description>
    <label>Reserve Transaction</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reserve Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>