InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__ClaimPaymentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimPaymentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
            <operation>equals</operation>
            <valueField>vlocity_ins__ClaimPayment__c.vlocity_ins__InsuranceClaimId__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__ClaimPayment__c</referenceTo>
    <relationshipLabel>Reserve Transactions</relationshipLabel>
    <relationshipName>ReserveTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>