InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__ClaimRecoveryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimRecoveryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Recovery</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
            <operation>equals</operation>
            <valueField>vlocity_ins__InsuranceClaimRecovery__c.vlocity_ins__ClaimId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__InsuranceClaimRecovery__c</referenceTo>
    <relationshipLabel>Recovery Transactions</relationshipLabel>
    <relationshipName>RecoveryTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>