InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__Comments__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>