InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__InsuranceClaimId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InsuranceClaimId__c</fullName>
    <label>Claim</label>
    <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
    <relationshipLabel>Reserve Transactions</relationshipLabel>
    <relationshipName>ClaimReserveTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>