InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__InvolvedPartyOrItem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InvolvedPartyOrItem__c</fullName>
    <formula>If( vlocity_ins__ClaimInvolvedPartyId__c !=null,  vlocity_ins__ClaimInvolvedPartyId__r.Name,  vlocity_ins__ClaimInvolvedPropertyId__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Item</label>
    <type>Text</type>
</CustomField>