InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__PayeeAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeeAccountId__c</fullName>
    <formula>IF(vlocity_ins__ClaimLineItemId__c!=null, vlocity_ins__ClaimLineItemId__r.vlocity_ins__PayeeAccountId__c,  vlocity_ins__InsuranceClaimId__r.vlocity_ins__PrimaryPayeeAccountId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Account</label>
    <type>Text</type>
</CustomField>