InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/fields/vlocity_ins__PayeePartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeePartyId__c</fullName>
    <formula>vlocity_ins__ClaimLineItemId__r.vlocity_ins__PayeePartyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Party</label>
    <type>Text</type>
</CustomField>