InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/recordTypes/vlocity_ins__Payment.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>