InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/recordTypes/vlocity_ins__Recovery.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Recovery</fullName>
    <active>true</active>
    <label>Recovery</label>
</RecordType>