InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsClaimReserveTransaction__c/recordTypes/vlocity_ins__ReserveAdjustment.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__ReserveAdjustment</fullName>
    <active>true</active>
    <label>Reserve Adjustment</label>
</RecordType>